force-app/main/default/objects/PradeepTestingOrg1__c/PradeepTestingOrg1__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>QATesting</description>
    <label>PradeepTestingQA</label>
</CustomObject>