force-app/main/default/objects/PradeepTestingOrg1__c/fields/phone1__c.field-meta.xml
<CustomField>
    <fullName>phone1__c</fullName>
    <label>phone1</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>