force-app/main/default/objects/PradeepTestingOrg1__c/fields/qatesting__c.field-meta.xml
<CustomField>
    <fullName>qatesting__c</fullName>
    <description>QAtest12062024</description>
    <label>qatesting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>